fix for google calendar on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -143,7 +143,7 @@
     }
 	/* End Blog page Area css
 	============================================================================================ */
-	
+
 	/* Contact Page Area css
 	============================================================================================ */
 	.contact_info{
@@ -171,7 +171,7 @@
 	}
 	/* End End Footer Area css
 	============================================================================================ */
-	
+
 	.home_banner_area .banner_inner .home_left_img {
 		padding-top: 0px;
 	}
@@ -236,7 +236,7 @@
 	}
 	/* End End Footer Area css
 	============================================================================================ */
-	
+
 	.welcome_text .row{
 		margin-bottom: -30px;
 	}
@@ -302,7 +302,7 @@
 	}
 	/* End Elements Area css
 	============================================================================================ */
-	
+
 	/* Blog Page Area css
 	============================================================================================ */
 	.blog_details h2 {
@@ -354,7 +354,7 @@
 	}
 	/* End Main Menu Area css
 	============================================================================================ */
-	
+
 	/* Home Banner Area css
 	============================================================================================ */
     .home_banner_area .banner_inner .banner_content {
@@ -377,10 +377,10 @@
 	.comments-area .thumb {
 		margin-right: 10px;
 	}
-	
+
 	/* End Blog Page Area css
 	============================================================================================ */
-	
+
 }
 
 /* Medium Widget Area css
@@ -396,10 +396,10 @@
 
 /* End Medium Widget Area css
 	============================================================================================ */
-	
+
 
 @media (max-width:450px){
-	/* The title of your name in blog.html 
+	/* The title of your name in blog.html
 	============================================================================================ */
 	h1.name{
 		font-size:40px;
@@ -408,7 +408,7 @@
 }
 
 @media (max-width:333px){
-	/* The title of your name in blog.html 
+	/* The title of your name in blog.html
 	============================================================================================ */
 	h1.name-small{
 		font-size:32px;
@@ -417,10 +417,25 @@
 }
 
 @media (max-width:267px){
-	/* The title of your name in blog.html 
+	/* The title of your name in blog.html
 	============================================================================================ */
 	h1.name-small-small{
 		font-size: 24px;
 		overflow:hidden;
 	}
+}
+
+.googleCalendar {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+
+.googleCalendar iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
